2011-10-05  Roland Levillain  <roland@lrde.epita.fr>

	Fix and clean up apps/papers/levillain.09.ismm/classif.cc.

	* apps/papers/levillain.09.ismm/classif.cc (main): Actually use
	the chain() routine from chain.hh instead of ad hoc code.
	Move code related to the construction of the 1-complex (graph)
	image on which the processing chain is run...
	(make_complex_image): ...here.
	* apps/papers/levillain.09.ismm/Makefile.am (classwst.pnm): Change
	the lambda (area) parameter to 4.

2011-10-04  Roland Levillain  <roland@lrde.epita.fr>

	Import the WST-based classification in apps/papers/levillain.09.ismm.

	* apps/papers/levillain.09.ismm/Makefile.am
	(noinst_PROGRAMS): Add classif.
	(classif_SOURCES): Add classif.cc
	(dist_noinst_DATA): Add classseedsi.pbm.
	(noinst_DATA): Add classwst.pnm.
	(classwst.pnm): New target.
	* apps/papers/levillain.09.ismm/classif.cc: New.
	Copied and adapted from
	sandbox/theo/esiee/laurent/presentation/classif.cc.
	* apps/papers/levillain.09.ismm/classseedsi.pbm: New.

2011-10-04  Roland Levillain  <roland@lrde.epita.fr>

	Split apps/papers/levillain.09.ismm/graph.cc.

	* apps/papers/levillain.09.ismm/graph.cc: Misc. changes.
	(mln::influence_zones)
	(mln::io::neato::save):
	Move functions...
	* apps/papers/levillain.09.ismm/influence_zones.hh,
	* apps/papers/levillain.09.ismm/io.hh:
	...here (new files).
	* apps/papers/levillain.09.ismm/Makefile.am (noinst_HEADERS):
	Add io.hh and influence_zones.hh

2011-10-04  Roland Levillain  <roland@lrde.epita.fr>

	Handle the case of filling an empty border.

	* mln/border/fill.hh (mln::border::impl::fill_size_1): Here.
	Aesthetic changes.
	* tests/border/fill_0.cc: New test.
	* tests/border/Makefile.am (check_PROGRAMS): Add fill_0.
	(fill_0_SOURCES): New.

2011-09-15  Roland Levillain  <roland@lrde.epita.fr>

	Update Milena tests w.r.t. the new version of lena.pgm.

	* tests/linear/log.cc: Update references values.

2011-05-12  Guillaume Lazzara  <z@lrde.epita.fr>
